--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h3>Address</h3>
         <address>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
             nisi.</address>
-            <p><a href="mailto:ayaanfareed2001@gmail.com">Contact</a></p>
+            <p><a href="mailto:ayaanfareed2001@gmail.com">Send Email</a></p>
     </body>
+
 </html>
